# Matrix-Mechanic

./: README.md  XOR_brain  app.py  comparison_manager.py  data_loader.py  efficient_qat.py  requirements-dev.txt
AI-Espionage/: ANALYSIS_COMPLETE.md  ANALYZER_USAGE.md  CONVERSATIONAL_ENCODING_PATTERNS.md  INDEPENDENT_ANALYSIS.md  POLYGLOT_PAYLOAD_CONFIRMED.md  README.md  RECURSIVE_STRUCTURE_DISCOVERED.md  SIMPLE_STRUCTURE_ANALYSIS.md  TECHNICAL_ARCHITECTURE.md  THE_0xC7_DELIMITER_KEY.md  VERIFICATION_REPORT.md  comprehensive_analyzer.py
AI-Espionage/findings/: BINARY_ANALYSIS_FINDINGS.md  COMPLETE_ANALYSIS.md  DECODING_SUMMARY.md  MAIN_analysis.txt  STRUCTURAL_ANALYSIS.md  TEXT_ANALYSIS_TOOLS.md  VIRUS_ANALYSIS.md  bytecode_analysis.txt  state_machine.txt
DevMaster Debugger/: MEGA_PATTERN_EXPANSION.py  README.md  install_all.bat  install_all.sh  nightmare_code.py
DevMaster Debugger/ai-debug-companion/: LICENSE  pyproject.toml
DevMaster Debugger/ai-debug-companion/ai_debug_companion/: __init__.py  ai_fixer.py  ai_provider.py  cli.py  fixer.py  history.py  models.py  monitor.py  parsers.py  suggestions.py  tui.py
DevMaster Debugger/ai-debug-companion/ai_debug_companion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DevMaster Debugger/codearchaeology/codearchaeology.egg-info/: PKG-INFO
DevMaster Debugger/codeseek/codeseek.egg-info/: PKG-INFO
DevMaster Debugger/deploy-shield/: README.md  setup.py
DevMaster Debugger/deploy-shield/deploy_shield/: __init__.py  cli.py
DevMaster Debugger/deploy-shield/deploy_shield/fixers/: docker_compose_fixer.py  dockerfile_fixer.py  env_fixer.py
DevMaster Debugger/deploy-shield/deploy_shield/generators/: docker_generator.py  env_generator.py  k8s_generator.py
DevMaster Debugger/deploy-shield/deploy_shield/testers/: connection_tester.py  health_checker.py
DevMaster Debugger/deploy-shield/deploy_shield/validators/: config_validator.py  database_validator.py  env_validator.py  permission_validator.py  port_validator.py  resource_validator.py  ssl_validator.py
DevMaster Debugger/devknowledge/: LICENSE  README.md  pyproject.toml
DevMaster Debugger/devknowledge/devknowledge/: __init__.py  cli.py  code_parser.py  embeddings.py  knowledge.py  linker.py  models.py  storage.py
DevMaster Debugger/devknowledge/devknowledge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
DevMaster Debugger/devknowledge/examples/: demo.sh
DevMaster Debugger/devnarrative/: LICENSE  README.md  pyproject.toml
DevMaster Debugger/devnarrative/devnarrative/: __init__.py  analyzer.py  cli.py  models.py  sessions.py  story.py
DevMaster Debugger/devnarrative/devnarrative.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
DevMaster Debugger/logs/: error_patterns.jsonl
DevMaster Debugger/performance-surgeon/: __init__.py  cli.py  core.py
DevMaster Debugger/performance-surgeon/examples/: slow_code.py
DevMaster Debugger/performance-surgeon/optimizers/: auto_optimizer.py
DevMaster Debugger/performance-surgeon/patterns/: performance_patterns.py
DevMaster Debugger/security-guardian/: README.md  demo_secure.py  demo_vulnerable.py  pyproject.toml
DevMaster Debugger/security-guardian/security_guardian/: __init__.py  cli.py  core.py  models.py
DevMaster Debugger/security-guardian/security_guardian/scanners/: __init__.py  dependency_scanner.py  injection_scanner.py  secrets_scanner.py
DevMaster Debugger/speed-guardian/: README.md  demo_fast.py  demo_slow.py  example_usage.py  pyproject.toml
DevMaster Debugger/speed-guardian/speed_guardian/: __init__.py  cli.py  config.py  core.py  models.py
DevMaster Debugger/speed-guardian/speed_guardian/analyzers/: __init__.py  bottleneck_detector.py  complexity_analyzer.py  pattern_detector.py
DevMaster Debugger/speed-guardian/speed_guardian/optimizers/: __init__.py  auto_fixer.py
DevMaster Debugger/speed-guardian/speed_guardian/profilers/: __init__.py  cprofile_profiler.py  line_profiler_impl.py  memory_profiler_impl.py
DevMaster Debugger/speed-guardian/speed_guardian/regression/: __init__.py  regression_detector.py
DevMaster Debugger/speed-guardian/speed_guardian/ui/: __init__.py  dashboard.py
DevMaster Debugger/test-guardian/: README.md  demo_functions.py  example_usage.py  pyproject.toml
DevMaster Debugger/test-guardian/test_guardian/: __init__.py  cli.py  core.py  models.py
DevMaster Debugger/test-guardian/test_guardian/analyzers/: __init__.py  code_analyzer.py  dependency_analyzer.py  type_analyzer.py
DevMaster Debugger/test-guardian/test_guardian/formatters/: __init__.py  pytest_formatter.py  unittest_formatter.py
DevMaster Debugger/test-guardian/test_guardian/generators/: __init__.py  fixture_generator.py  mock_generator.py  test_generator.py
Easy-Training/: README.md  advanced_training.py  flask_endpoint_fixer.py  requirements.txt
Easy-Training/modules/: __init__.py  _template.py
Easy-Training/static/css/: power_user.css  style.css
Easy-Training/static/js/: app.js  pi_features.js
Kernel-Sanders/: cupy_backend.py  gpu_reservoir.py  pi2_cuda.py  pi_grid_kernels.py  pi_kernel.py  pi_pure_int8_linear.py  sphere_stream_raw.py
Novel-Neural-Novelty-Networks/: Circle_Jerk.py  atomic_native.py  heartbeat_native.py  molecular_native.py  singularity_native.py  sphere_native.py
OpOp/: OpOp_README.md  opop.py
modules/: native_quant.py  qat_lut.py
static/js/: autonomous_mind.js  pi_quant.js  power_user.js
templates/: index.html
