[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-guardian"
version = "1.0.0"
description = "Automatic security vulnerability scanner for Python code"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Codes-Masterpiece", email = "codes@masterpiece.dev"}
]
keywords = ["security", "vulnerability", "scanner", "owasp", "secrets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
security-guardian = "security_guardian.cli:main"

[project.urls]
Homepage = "https://github.com/Ninja1232123/Codes-Masterpiece"
Repository = "https://github.com/Ninja1232123/Codes-Masterpiece"

[tool.setuptools.packages.find]
where = ["."]
include = ["security_guardian*"]
